--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,70 +1,77 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/*..............................Colors*/
+
+/*------------------color-----*/
+
 .bg-color-name-title{
     background-color: #676767;
 }
 
-.ui-menu-home-color{
-    background-color: #e67e22;
+.ui-menu-color-home{
+    background-color:#e67e22;
 }
 
-.ui-menu-resume-color{
-    background-color: #9b59b6;
+.ui-menu-color-resume{
+    background-color:#9b59b6;
 }
 
-.ui-menu-contact-color{
-    background-color: #3498db;
+.ui-menu-color-contact{
+    background-color:#3498db;
 }
 
-.ui-menu-download-color{
-    background-color: #525252;
+.ui-menu-color-download{
+    background-color:#525252;
 }
 
-header{
+
+
+.header{
     margin:0;
 }
 
-/*..............................Heading*/
+.logo{
+    background: url(../image/rosie.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 360px;
+
+}
 
 .heading{
     margin-left: 50px;
 }
 
-.logo{
-    background-image: url(../image/rosie.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 360px;
-}
-
-.name{
+.name {
+    
     font-family: "Exo", sans-serif;
     font-weight: 100;
     font-size: 46px;
-    color:#fff;
     margin-top: 50px;
+    color:#fff;
 }
 
-.title{
-    font-family: "Roboto", sans-serif;
-    font-weight: 200;
-    font-size: 28px;
-    color:#fff;
-    margin-top: 20px;
+.title {
+    
+    font-family: "Roboto" , sans-serif;
+    font-weight: 300;
+    font-size: 40px;
     margin-bottom: 90px;
+    margin-top: 15px;
+    color:#fff;
+
 }
 
 .list-inline-item:not(:last-child) {
-    margin-right: 0;
+    margin: 0; 
 }
 
 .menucontainer{
     font-size: 0;
 }
+    
 
-#nav li {
+#nav li{
     font-size: 14px;
-    padding: 0;
+    padding:0;
 }
