--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-
+body{
+    margin: 0;
+    font-size: 0px;
+}
 /*------------------color-----*/
 
 .bg-color-name-title{
@@ -23,7 +26,32 @@
     background-color:#525252;
 }
 
+.bg-color-footer{
+    background-color: #525252;
+}
 
+/*------------------Special padding/margine/text -----*/
+
+h1,h2,h3,h4{
+    margin:0;
+}
+
+.uppercase{
+    text-transform: uppercase;
+}
+
+.general-sub{
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color:#fafafa;
+}
+
+.inline-block{
+    display:inline-block;
+}
+
+
+/*------------------Header -----*/
 
 .header{
     margin:0;
@@ -63,7 +91,7 @@
 }
 
 .list-inline-item:not(:last-child) {
-    margin: -5px; 
+    margin: 0px; 
 }
 
 .menucontainer{
@@ -123,7 +151,7 @@
 }
 
 .bit-right{
-    padding-left: 5px;
+    padding-left: 0px;
 }
 
 .hvr-sweep-to-bottom::before{
@@ -131,3 +159,12 @@
     height: 120px;
 }
 
+/*------------------Footer-----*/
+
+footer{
+    min-height: 120px;
+    background-color: #525252;
+    color:#fafafa;
+    margin: 0px;
+    font-size: 14px;
+}
