--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,3 +168,40 @@ footer{
     margin: 0px;
     font-size: 14px;
 }
+
+.cv-pdf i {
+    font-size:18px;
+    color:#fafafa;
+    text-align: center;
+    padding-left: 5px;
+    transition: all 0.35s ease-in-out;
+}
+
+.cv-pdf i:hover{
+    color:#e84610;
+}
+
+.social-link{
+    padding-bottom: 15px;
+}
+
+.social-link li a i{
+    height:32px;
+    width: 32px;
+    color:#fafafa;
+    text-align: center;
+    border-radius: 50%;
+    padding: 12px 0;
+    font-size:13px;
+    line-height: 7px;
+    background-color: #8f8f8f;
+    transition:all 0.35s ease-in-out;
+}
+
+.social-link li a i:hover{
+    background-color: #e84610;
+}
+
+#footer-details{
+    padding:20px;
+}
