--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@ body{
     background-color: #525252;
 }
 
+.bg-color-personal-info{
+    background-color:#f4f4f4 ;
+}
+
 /*------------------Special padding/margine/text -----*/
 
 h1,h2,h3,h4{
@@ -232,4 +236,44 @@ footer{
 
 .three-reasons-heading{
     margin-bottom: 15px;
+}
+
+/*---------------------------------------------------Three Reasons -----*/
+
+.personal-info-item{
+    color: #080303;
+    font-size: 14px;
+    font-weight: 300;
+    margin-bottom: 20px;
+    display:block;
+    clear:both;
+
+}
+
+.personal-info-item .key,
+.personal-info-item .value{
+    padding-right: 8px;
+    display: inline-block;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p{
+    margin:0;
+}
+
+.personal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+
+.personal-info-item .value {
+    position: relative;
+    width: 60%;
 }
