--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,3 +303,42 @@ footer{
     color:#fafafa;
     background-color: rgba(25, 25, 25, 0.2);
 }
+
+/*--------------------------------------------------work history  -----*/
+
+.timeline-item{
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color:#fafafa;
+    border-left:1px solid;
+}
+
+.timeline-item p{
+    padding:0;
+    margin:0;
+}
+
+.timeline-item:before{
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top:3em;
+    display:block;
+    font-family: "Exo" sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    margin: 0;
+    padding: 0;
+}
+
+.timeline-item:after{
+    width: 12p;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background-color: #fafafa;
+}
